--- a/iotedgeOpenVINO/CMakeLists.txt
+++ b/iotedgeOpenVINO/CMakeLists.txt
@@ -131,7 +131,7 @@ if (UNIX)
 endif()
 
 add_subdirectory(modules/interactive_face_detection_sample)
-#add_subdirectory(modules/SampleModule)
+add_subdirectory(modules/SampleModule)
 
 if (NEED_EXTENSIONS)
     add_subdirectory(modules/extension)
