--- a/iotedgeOpenVINO/Dockerfile.amd64
+++ b/iotedgeOpenVINO/Dockerfile.amd64
@@ -15,7 +15,7 @@ WORKDIR /app
 COPY . ./
 RUN ./build_samples.sh
 
-FROM base
+FROM build-env
 WORKDIR /app
 COPY --from=build-env /app ./
 RUN /opt/intel/computer_vision_sdk_2018.2.319/install_dependencies/install_NEO_OCL_driver.sh
