--- a/iotedgeOpenVINO/Dockerfile.amd64
+++ b/iotedgeOpenVINO/Dockerfile.amd64
@@ -14,7 +14,7 @@ RUN apt-get update && \
 WORKDIR /app
 COPY . ./
 RUN ./build_samples.sh
-RUN /opt/intel/computer_vision_sdk_2018.2.319/install_dependencies/install_NEO_OCL_driver.sh
+RUN sudo -E /opt/intel/computer_vision_sdk_2018.2.319/install_dependencies/install_NEO_OCL_driver.sh
 RUN useradd -ms /bin/bash moduleuser
 RUN usermod -a -G video root
 CMD ["./build/intel64/Release/main"]
