--- a/iotedgeOpenVINO/Dockerfile.amd64
+++ b/iotedgeOpenVINO/Dockerfile.amd64
@@ -11,10 +11,11 @@ SHELL ["/bin/bash", "-c"]
 RUN apt-get update && \
     apt-get install -y --no-install-recommends cmake gcc g++ make libgflags-dev && \
     rm -rf /var/lib/apt/lists/* 
+WORKDIR /opt/intel/computer_vision_sdk_2018.2.319/install_dependencies
+RUN sudo -E ./install_NEO_OCL_driver.sh
+RUN usermod -a -G video root
 WORKDIR /app
 COPY . ./
 RUN ./build_samples.sh
-RUN sudo -E /opt/intel/computer_vision_sdk_2018.2.319/install_dependencies/install_NEO_OCL_driver.sh
 RUN useradd -ms /bin/bash moduleuser
-RUN usermod -a -G video root
 CMD ["./build/intel64/Release/main"]
