--- a/iotedgeOpenVINO/CMakeLists.txt
+++ b/iotedgeOpenVINO/CMakeLists.txt
@@ -132,6 +132,7 @@ endif()
 
 add_subdirectory(modules/interactive_face_detection_sample)
 add_subdirectory(modules/SampleModule)
+add_subdirectory(modules/testC)
 
 if (NEED_EXTENSIONS)
     add_subdirectory(modules/extension)
