--- a/iotedgeOpenVINO/modules/testC/CMakeLists.txt
+++ b/iotedgeOpenVINO/modules/testC/CMakeLists.txt
@@ -1,6 +1,19 @@
+# Copyright (c) 2018 Intel Corporation
+
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+
+#      http://www.apache.org/licenses/LICENSE-2.0
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 cmake_minimum_required(VERSION 2.8)
 
-set(TARGET_NAME "main")
+set(TARGET_NAME "testC")
 
 macro(compileAsC99)
   if (CMAKE_VERSION VERSION_LESS "3.1")
@@ -29,10 +42,7 @@ set(main_c_files
 
 add_executable(${TARGET_NAME} ${main_c_files})
 
-add_dependencies(${TARGET_NAME} interactive_face_detection_sample)
-
-target_link_libraries(${TARGET_NAME}
-    interactive_face_detection_sample
+target_link_libraries(${TARGET_NAME} 
     iothub_client_mqtt_transport
     iothub_client
     parson
