--- a/iotedgeOpenVINO/Dockerfile.amd64
+++ b/iotedgeOpenVINO/Dockerfile.amd64
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial AS base
+FROM openvino.azurecr.io/openvino-base:2018.2.319 AS base
 RUN apt-get update && \
     apt-get install -y --no-install-recommends software-properties-common && \
     add-apt-repository -y ppa:aziotsdklinux/ppa-azureiot && \
